change url for ruby project

--- a/data/projects.json
+++ b/data/projects.json
@@ -7,7 +7,7 @@
             "title": "Ruby and MiniTest",
             "description": "Learning Ruby while becoming a more test-driven developer. TDD rules! ",
             "repo": "https://github.com/dhackelman/prepwork_launchschool",
-            "url": "coming soon..."
+            "url": "/"
 
         },
       {
