--- a/data/projects.json
+++ b/data/projects.json
@@ -3,11 +3,19 @@
 
     "projects": [
       {
+            "image": "../src/styles/images/neworleanswildlifeband.png",
+            "title": "New Orleans Wildlife Band",
+            "description": "Created a website from scratch for new jazz band in New Orleans, LA. Worked with client to develop this to their design and specifications.",
+            "repo": "https://github.com/dhackelman/nolawildlifeband",
+            "url": "https://dhackelman.github.io/nolawildlifeband/"
+
+        },
+      {
             "image": "../src/styles/images/tddlife.png",
             "title": "Ruby and MiniTest",
             "description": "Learning Ruby while becoming a more test-driven developer. TDD rules! ",
             "repo": "https://github.com/dhackelman/prepwork_launchschool",
-            "url": "/"
+            "url": ""
 
         },
       {
