edit for project description

--- a/data/projects.json
+++ b/data/projects.json
@@ -5,7 +5,7 @@
       {
             "image": "../src/styles/images/neworleanswildlifeband.png",
             "title": "New Orleans Wildlife Band",
-            "description": "Created a website from scratch for new jazz band in New Orleans, LA. Worked with client to develop this to their design and specifications.",
+            "description": "Created a website from scratch for new jazz band in New Orleans, LA. Worked with client to develop site based on their design and specifications.",
             "repo": "https://github.com/dhackelman/nolawildlifeband",
             "url": "https://dhackelman.github.io/nolawildlifeband/"
 
